fix thumbnail overflow

--- a/src/components/post/thumbnail/thumbnail.module.css
+++ b/src/components/post/thumbnail/thumbnail.module.css
@@ -6,6 +6,7 @@
   height: var(--height, 70px);
   z-index: 1;
   position: relative;
+  overflow: hidden;
 }
 
 .thumbnailHidden {
